Fixed misaligned project button

--- a/workspace/static/less/sc/ProjectViewer.less
+++ b/workspace/static/less/sc/ProjectViewer.less
@@ -33,4 +33,5 @@
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 100px;
+    vertical-align: bottom;
 }
